--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "com.srcnalt.openai-unity": "https://github.com/srcnalt/OpenAI-Unity.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.10.0",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.netcode.gameobjects": "1.9.1",
+    "com.unity.services.lobby": "1.2.1",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
